--- a/public/css/home.css
+++ b/public/css/home.css
@@ -8,7 +8,7 @@ body {
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
 }
 .cover-container {
-  max-width: 60vw;
+  max-width: 42em;
 }
 
 .nav-link {
