--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
     </head>
 
     <body class="d-flex text-center text-white bg-dark">
-        <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+        <div class="container d-flex w-100 h-100 p-3 mx-auto flex-column">
             <header class="mb-auto">
                 <div>
                     <h3 class="float-md-start mb-0">YelpCamp</h3>
@@ -31,7 +31,7 @@
                 </div>
             </header>
             <main class="px-3">
-                <h1 class="mx-auto pb-2 w-25 border-bottom border-3">YelpCamp</h1>
+                <h1 class="mx-auto pb-2">YelpCamp</h1>
                 <p class="lead"> Welcome to YelpCamp! <br> Jump right in and explore our
                     many campgrounds. <br>
                     Feel free to share some of your own and comment on others!</p>
